objects/Case.object
<CustomObject>
    <fields>
        <fullName>Sale_Lookup_Mirror__c</fullName>
        <description>Used with Formassembly to selectively update the Sale lookups 1 - 6 based on which one is NOT blank.</description>
        <label>Sale Lookup Mirror</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Stage__c</fullName>
        <formula>TEXT(Sales__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Total_balance_due__c</fullName>
        <formula>TEXT(Sales__r.ChargentSFA__Balance_Due__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Total balance due</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep2__c</fullName>
        <formula>Sales__r.Sales_Rep__r.Name</formula>
        <label>Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>Sales_Rep__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_of_Newest_Sale__c</fullName>
        <label>Sales Rep of Newest Sale</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Vertiba OnDemand, 9/18/2014, SR-00002279</description>
        <inlineHelpText>Related Sale</inlineHelpText>
        <label>Sales</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services_Requested_10__c</fullName>
        <label>Services Requested 10</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Services_Requested</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Requested_11__c</fullName>
        <label>Services Requested 11</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Services_Requested</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Requested_12__c</fullName>
        <label>Services Requested 12</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Services_Requested</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity_Level__c</fullName>
        <label>Priority Internal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1 - Critical</fullName>
                </value>
                <value>
                    <fullName>Level 2 - Urgent</fullName>
                </value>
                <value>
                    <fullName>Level 3 - High</fullName>
                </value>
                <value>
                    <fullName>Level 4 - Medium</fullName>
                </value>
                <value>
                    <fullName>Level 5 - New Idea</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Structure_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Structure Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The manager/supervisor who needs to address the complaint.</inlineHelpText>
        <label>Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>simplesurvey__Survey__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Change_Required__c</fullName>
        <label>System Change Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - Testing</fullName>
                </value>
                <value>
                    <fullName>Yes - Cross training</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Changes__c</fullName>
        <label>System Changes</label>
        <summaryFilterItems>
            <field>System_Changes__c.Change_Complete__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>System_Changes__c.Helpdesk_Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tax_Preparer_Assigned__c</fullName>
        <label>Tax Preparer Assigned</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CPA_Team_Assigned__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Ben Mehr</fullName>
                </value>
                <value>
                    <fullName>Charles Rogler</fullName>
                </value>
                <value>
                    <fullName>Chris Saccucci</fullName>
                </value>
                <value>
                    <fullName>Eliot Thomas</fullName>
                </value>
                <value>
                    <fullName>Emily Dacanay</fullName>
                </value>
                <value>
                    <fullName>Eric Day</fullName>
                </value>
                <value>
                    <fullName>Ian Hanuscin</fullName>
                </value>
                <value>
                    <fullName>Jacob Hansen</fullName>
                </value>
                <value>
                    <fullName>Jay King</fullName>
                </value>
                <value>
                    <fullName>Jeff Talbert</fullName>
                </value>
                <value>
                    <fullName>Jennifer Phipps</fullName>
                </value>
                <value>
                    <fullName>Kevin Kolman</fullName>
                </value>
                <value>
                    <fullName>Lindsey Vaughn</fullName>
                </value>
                <value>
                    <fullName>Lulu Mendiola</fullName>
                </value>
                <value>
                    <fullName>Marianne Reeves</fullName>
                </value>
                <value>
                    <fullName>Mariel Garvin</fullName>
                </value>
                <value>
                    <fullName>Petros Leventis</fullName>
                </value>
                <value>
                    <fullName>Rob McConnell</fullName>
                </value>
                <value>
                    <fullName>Ronnie Withaeger</fullName>
                </value>
                <value>
                    <fullName>Steve Kalt</fullName>
                </value>
                <value>
                    <fullName>Toni Covey</fullName>
                </value>
                <value>
                    <fullName>Tracy Cooklin</fullName>
                </value>
                <value>
                    <fullName>Christos Zattas</fullName>
                </value>
                <value>
                    <fullName>Marie Galligan</fullName>
                </value>
                <value>
                    <fullName>John Loncar</fullName>
                </value>
                <value>
                    <fullName>Sara Winter</fullName>
                </value>
                <value>
                    <fullName>Shantai Wyatt</fullName>
                </value>
                <value>
                    <fullName>Autumn Gatesman</fullName>
                </value>
                <value>
                    <fullName>Julio Trejo</fullName>
                </value>
                <value>
                    <fullName>Landon Stagg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Preparer__c</fullName>
        <label>Tax Preparer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tax_Preparer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Returns_Completed_By__c</fullName>
        <label>Tax Returns Completed By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anderson Tax Department</fullName>
                </value>
                <value>
                    <fullName>Contact me about your tax Services</fullName>
                </value>
                <value>
                    <fullName>My Local CPA</fullName>
                </value>
                <value>
                    <fullName>Myself</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <inlineHelpText>For use by the Salesforce team. Denotes which developer on our India or Web team is working on a case.</inlineHelpText>
        <label>Team Member</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Developer 1</fullName>
                </value>
                <value>
                    <fullName>Caleb Owens</fullName>
                </value>
                <value>
                    <fullName>Grady McNeill</fullName>
                </value>
                <value>
                    <fullName>Tony - DevRadius</fullName>
                </value>
                <value>
                    <fullName>Shyam - DevRadius</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Signature__c</fullName>
        <label>Team Signature</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <formula>TEXT(Account.Teams__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Weight__c</fullName>
        <label>Ticket Weight</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>Long-Term System-Wide</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Written_Sales__c</fullName>
        <inlineHelpText>From sale linked to case</inlineHelpText>
        <label>Total Written Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trust__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trust</label>
        <referenceTo>Trust__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_Agreement__c</fullName>
        <description>SCH-0029</description>
        <label>Type of Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>90 Day</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>VB Package</fullName>
                </value>
                <value>
                    <fullName>VB Recurring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Project__c</fullName>
        <label>Type of Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgent_Cases__c</fullName>
        <label>Urgent Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verify_Closing_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used with a validation to verify that a case should be closed.</description>
        <inlineHelpText>Check this box to verify case closure.</inlineHelpText>
        <label>Verify Closing Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vertucci_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents duplicate tasks from Vertucci form</description>
        <label>Vertucci Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Fast_Forms_Auto_Assign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field must be added to a form as a hidden checked field to enable auto-assignment rules.</description>
        <label>Formstack Auto-Assign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Fast_Forms_Autoresponse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field must be added to a form as a hidden checked field to enable auto-response rules.</description>
        <label>Formstack Autoresponse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Error_URL_if_applicable__c</fullName>
        <label>Web Error URL (if applicable)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Webinar_Offer_End_Date__c</fullName>
        <label>Webinar-Offer End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Webinar_Offer_Start_Date__c</fullName>
        <label>Webinar-Offer Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Webinar_Offer_details__c</fullName>
        <description>Includes:Offer Type ;Offer Terms;</description>
        <inlineHelpText>Includes:Offer Type ;Offer Terms;</inlineHelpText>
        <label>Webinar-Offer details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Webinar_Recording_Due_Date__c</fullName>
        <label>Webinar-Recording Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Webinar_Slides_Due_Date__c</fullName>
        <label>Webinar-Slides Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Webinar_details__c</fullName>
        <description>Includes:Title of Webinar ;Webinar Speaker ;Type of Platform ;Intended Audience ;Bullet Points 
;Summary Paragraph ;Call to Action ;Extra Details</description>
        <inlineHelpText>Includes:Title of Webinar ;Webinar Speaker ;Type of Platform ;Intended Audience ;Bullet Points 
;Summary Paragraph ;Call to Action ;Extra Details</inlineHelpText>
        <label>Webinar details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Weighted_Priority__c</fullName>
        <formula>/*
IF(TEXT(Business_Value__c) = &quot;13&quot;, 100.002 / (Hours_Required__c * 7),
IF(TEXT(Business_Value__c) = &quot;8&quot;, 85.716 / (Hours_Required__c * 6),
IF(TEXT(Business_Value__c) = &quot;5&quot;, 71.43 / (Hours_Required__c * 5),
IF(TEXT(Business_Value__c) = &quot;3&quot;, 57.144 / (Hours_Required__c * 4),
IF(TEXT(Business_Value__c) = &quot;2&quot;, 42.858 / (Hours_Required__c * 3),
IF(TEXT(Business_Value__c) = &quot;1&quot;, 28.572 / (Hours_Required__c * 2),
IF(TEXT(Business_Value__c) = &quot;0&quot;, 14.286 / (Hours_Required__c * 1),
0)))))))
*/

IF(TEXT(Business_Value__c) = &quot;13&quot;, 169 / Hours_Required__c,
IF(TEXT(Business_Value__c) = &quot;8&quot;, 64 /  Hours_Required__c,
IF(TEXT(Business_Value__c) = &quot;5&quot;, 25 /  Hours_Required__c,
IF(TEXT(Business_Value__c) = &quot;3&quot;, 9 /  Hours_Required__c,
IF(TEXT(Business_Value__c) = &quot;2&quot;, 4 /  Hours_Required__c,
IF(TEXT(Business_Value__c) = &quot;1&quot;, 2 /  Hours_Required__c,
IF(TEXT(Business_Value__c) = &quot;0&quot;, 1 /  Hours_Required__c,
0)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Priority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2 Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>admin_Case_Selector__c</fullName>
        <formula>IF(
OR(
 CreatedById = $User.Id,
  $Profile.Name = &quot;System Administrator&quot;,
 OwnerId = $User.Id), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>admin Case Selector</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>box__FolderID__c</fullName>
        <description>This field is used to store the folder id when the files are uploaded to BOX</description>
        <label>FolderID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>helpdesk_Date_Put_On_Hold__c</fullName>
        <label>Date Put On Hold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>helpdesk_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>helpdesk_Estimated_Time__c</fullName>
        <label>Estimated Time (Hours)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>160</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>helpdesk_Group__c</fullName>
        <label>Bucket</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Different Department</fullName>
                </value>
                <value>
                    <fullName>Large Project</fullName>
                </value>
                <value>
                    <fullName>Assigned out</fullName>
                </value>
                <value>
                    <fullName>Waiting to be assigned</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                    <isActive>false</isActive>
                    <label>Development</label>
                </value>
                <value>
                    <fullName>Idea</fullName>
                    <isActive>false</isActive>
                    <label>Idea</label>
                </value>
                <value>
                    <fullName>Manager</fullName>
                    <isActive>false</isActive>
                    <label>Manager Escalate</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <isActive>false</isActive>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Support</fullName>
                    <isActive>false</isActive>
                    <label>Support</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>helpdesk_Priority__c</fullName>
        <label>Priority Helpdesk</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1 - Critical</fullName>
                </value>
                <value>
                    <fullName>Level 2 - Urgent</fullName>
                </value>
                <value>
                    <fullName>Level 3 - High</fullName>
                </value>
                <value>
                    <fullName>Level 4 - Medium</fullName>
                </value>
                <value>
                    <fullName>Level 5 - New Idea</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>helpdesk_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>helpdesk_assigned_to__c</fullName>
        <label>Assigned To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unassigned</fullName>
                    <default>true</default>
                    <label>Unassigned</label>
                </value>
                <value>
                    <fullName>Phil Perna</fullName>
                </value>
                <value>
                    <fullName>Shobi Rajagopalan</fullName>
                </value>
                <value>
                    <fullName>Sally Lee</fullName>
                </value>
                <value>
                    <fullName>Nick Frates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>helpdesk_follow_up_date__c</fullName>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>n2de__Action__c</fullName>
        <label>Distribution action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contacted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>n2de__DE_Status__c</fullName>
        <externalId>true</externalId>
        <label>DE Classifier Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__DE_Territory__c</fullName>
        <description>Deprecated, use Distribution_engine_details__c.Territory__c instead</description>
        <label>DE Territory (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_count__c</fullName>
        <description>The number of times this record has been assigned via Distribution Engine</description>
        <inlineHelpText>The number of times this record has been assigned via Distribution Engine</inlineHelpText>
        <label>Distribution count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_engine_details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distribution Engine details</label>
        <referenceTo>n2de__Distribution_engine_details__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Is_archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_distributed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is distributed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_reassigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is auto reassigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_trigger_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_triggered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is triggered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Last_archive_date__c</fullName>
        <label>Last archive date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_distributed__c</fullName>
        <label>Date last distributed to user</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_reassigned__c</fullName>
        <label>Date last auto reassigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Source_queue__c</fullName>
        <label>Source queue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Time_to_action_mins__c</fullName>
        <label>Time to action (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rrpu__Alert_Message__c</fullName>
        <description>This field is installed by Riptide Pop-up Alerts and is used in conjunction with the Pop-up Alert S-Control.</description>
        <inlineHelpText>If you enter text into this field the text will be displayed in a pop-up message whenever someone views this record.</inlineHelpText>
        <label>Alert Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Sent__c</fullName>
        <label>Survey Sent</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AS_Cases_that_need_to_be_reassigned</fullName>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.AS_Case</value>
        </filters>
        <filters>
            <field>Case_Owner_Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>AS Cases that need to be reassigned</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Aaron_s_Cases</fullName>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Bookkeeping</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>hartstein,fabian,tametha,howard,zimmerman</value>
        </filters>
        <label>Bookkeeping Cases that need new owner</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Archived</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Bookkeeping_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <columns>DateOpened__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Bookkeeping</value>
        </filters>
        <label>All Bookkeeping Case</label>
        <sharedTo>
            <group>Bookkeeping</group>
            <group>Bookkeeping_Managers</group>
            <group>Job_Role_Bookkeeping</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Platinum_Questions</fullName>
        <columns>Case_owner_remove_Lex_for_report__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Platinum_Questions</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All Platinum Questions</label>
    </listViews>
    <listViews>
        <fullName>Anderson_Advisors_Help_Desk</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Help_Desk</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Anderson</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Advisors</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Anderson Advisors Help Desk</label>
    </listViews>
    <listViews>
        <fullName>Bookkeeping_Flat_Rate</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Monthly_Flat_Rate_Hours__c</columns>
        <columns>Flat_Rate_Hours_Last_Updated__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Bookkeeping</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Bookkeeping Flat Rate</label>
        <sharedTo>
            <group>Bookkeeping_Managers</group>
            <group>Job_Role_Accounting_Coordinator</group>
            <group>Job_Role_Bookkeeping</group>
        </sharedTo>
    </listViews>
</CustomObject>